Solve the overflow issue on small screen

--- a/css/pizdiuc.css
+++ b/css/pizdiuc.css
@@ -43,7 +43,7 @@ body {
 }
 @media (max-width: 56.25em) {
   .row {
-    max-width: 50rem;
+    max-width: 85%;
   }
 }
 .row:not(:last-child) {
@@ -53,6 +53,12 @@ body {
   .row:not(:last-child) {
     margin-bottom: 6rem;
     padding: 0 2rem;
+  }
+}
+@media (max-width: 75em) {
+  .row:not(:last-child) {
+    margin-bottom: 6rem;
+    padding: 1rem 2rem;
   }
 }
 .row::after {
@@ -105,6 +111,16 @@ body {
 .section-about p {
   font-size: 1.5rem;
 }
+@media (max-width: 56.25em) {
+  .section-about {
+    height: 140vh;
+  }
+}
+@media (max-width: 37.5em) {
+  .section-about {
+    height: 110vh;
+  }
+}
 
 .features {
   height: 120vh;
@@ -140,6 +156,11 @@ body {
     padding: 5rem 0;
   }
 }
+@media (max-width: 75em) {
+  .features-top {
+    padding: 20rem 2rem;
+  }
+}
 .features-top > * {
   transform: skewY(2deg);
 }
@@ -169,6 +190,16 @@ body {
   height: 120vh;
   padding: 10rem 0 0;
   margin-top: -5rem;
+}
+@media (max-width: 56.25em) {
+  .backface-feature {
+    height: 220vh;
+  }
+}
+@media (max-width: 37.5em) {
+  .backface-feature {
+    height: 210vh;
+  }
 }
 
 .navigation-checkbox {
@@ -650,6 +681,12 @@ body {
   clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
   z-index: 2;
 }
+@media (max-width: 56.25em) {
+  .video-background {
+    margin-top: -10rem;
+    clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);
+  }
+}
 
 .video-bg {
   position: absolute;
@@ -669,6 +706,7 @@ body {
 }
 
 .video-form {
+  top: 25%;
   background: #020024;
   background: linear-gradient(95deg, #020024 0%, rgba(255, 255, 255, 0.7035189076) 0%, rgba(255, 255, 255, 0.7035189076) 44%, rgba(0, 0, 0, 0) 44%, rgba(0, 0, 0, 0) 100%), url("../img/adam.jpg") top;
   box-shadow: 0 1rem 4rem #00000021;
@@ -678,6 +716,14 @@ body {
   margin: 0 auto;
   position: relative;
 }
+@media (max-width: 56.25em) {
+  .video-form {
+    top: 20%;
+    height: 50%;
+    width: 95%;
+    background: linear-gradient(95deg, #020024 0%, rgba(255, 255, 255, 0.7035189076) 0%, rgba(255, 255, 255, 0.7035189076) 80%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0) 100%), url("../img/adam.jpg") top;
+  }
+}
 
 .form {
   position: absolute;
@@ -685,6 +731,11 @@ body {
   left: 0;
   max-width: 40rem;
   margin: 2rem;
+}
+@media (max-width: 56.25em) {
+  .form {
+    width: 70rem;
+  }
 }
 
 .input-form__input {
@@ -867,6 +918,11 @@ body {
   top: 2rem;
   right: 2rem;
 }
+@media (max-width: 56.25em) {
+  .popup-close {
+    color: white;
+  }
+}
 .popup-close:link, .popup-close:visited {
   text-decoration: none;
 }
@@ -891,11 +947,21 @@ body {
 .composition {
   position: relative;
 }
+@media (max-width: 56.25em) {
+  .composition {
+    width: 90%;
+  }
+}
 .composition_img {
   width: 45%;
   transition: all 0.3s;
   box-shadow: 0 0 4rem #303030;
   outline-offset: 1rem;
+}
+@media (max-width: 56.25em) {
+  .composition_img {
+    width: 70%;
+  }
 }
 .composition_img:hover {
   z-index: 100;
@@ -908,16 +974,35 @@ body {
   top: 4rem;
   left: 0;
 }
+@media (max-width: 56.25em) {
+  .composition_img1 {
+    top: 0;
+    left: 0;
+  }
+}
 .composition_img2 {
   position: absolute;
   top: 0;
   left: 30%;
   z-index: 2;
 }
+@media (max-width: 56.25em) {
+  .composition_img2 {
+    left: 22%;
+    top: 20rem;
+    z-index: 2;
+  }
+}
 .composition_img3 {
   position: absolute;
   top: 2rem;
   left: 15%;
+}
+@media (max-width: 56.25em) {
+  .composition_img3 {
+    top: 0;
+    left: 45%;
+  }
 }
 .composition:hover .composition_img:not(:hover) {
   transform: scale(0.8);
