--- a/sass/_video.scss
+++ b/sass/_video.scss
@@ -5,39 +5,60 @@
     position: relative;
     clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
     z-index: 2;
+
+    @include respond(tablet-port) {
+        margin-top: -10rem;
+        clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);
+
+    }
 }
-.video-bg{
+
+.video-bg {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-       height: 100%;
-       z-index: -1;
-    
-    &__content{
+    height: 100%;
+    z-index: -1;
+
+    &__content {
         width: 100%;
-       height: 100%;
+        height: 100%;
         object-fit: cover;
         opacity: .6;
-      
         -moz-filter: grayscale(.2) blur(3px);
         filter: grayscale(.2) blur(3px);
+
     }
 }
 
-.video-form{
+.video-form {
     // background: white;
-    background: rgb(2,0,36);
+    top: 25%;
+    background: rgb(2, 0, 36);
     background: linear-gradient(95deg,
-     rgba(2,0,36,1) 0%,
-      rgba(255,255,255,0.7035189075630253) 0%,
-      rgba(255,255,255,0.7035189075630253) 44%,
-       rgba(0,0,0,0) 44%, rgba(0,0,0,0) 100%),
-    url('../img/adam.jpg') top ;
+            rgba(2, 0, 36, 1) 0%,
+            rgba(255, 255, 255, 0.7035189075630253) 0%,
+            rgba(255, 255, 255, 0.7035189075630253) 44%,
+            rgba(0, 0, 0, 0) 44%, rgba(0, 0, 0, 0) 100%),
+        url('../img/adam.jpg') top;
     box-shadow: 0 1rem 4rem #00000021;
     height: 60%;
     width: 80%;
     z-index: 100;
     margin: 0 auto;
     position: relative;
+
+
+    @include respond(tablet-port) {
+        top: 20%;
+        height: 50%;
+        width: 95%;
+        background: linear-gradient(95deg,
+                rgba(2, 0, 36, 1) 0%,
+                rgba(255, 255, 255, 0.7035189075630253) 0%,
+                rgba(255, 255, 255, 0.7035189075630253) 80%,
+                rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0) 100%),
+            url('../img/adam.jpg') top;
+    }
 }
